syntax = "proto3";

package manager_department;

option go_package = "./v1;v1";

import "validate/validate.proto";

message Department {
  uint32 id = 1;
  uint32 parent_id = 2;
  string name = 3;
  string keyword = 4;
  string description = 5;
  uint32 created_at = 6;
  uint32 updated_at = 7;
  repeated Department children = 8;
}

message GetDepartmentTreeReply{
  repeated Department list = 1;
}

message GetDepartmentRequest{
  uint32 id = 1[(validate.rules).uint32 = {gt:0}];
}

message GetDepartmentReply{
  Department department = 1;
}

message AddDepartmentRequest{
  uint32 parent_id = 1[(validate.rules).uint32 = {gt:0}];
  string name = 2[(validate.rules).string = {min_len:1}];
  string keyword = 3[(validate.rules).string = {min_len:1}];
  string description = 4[(validate.rules).string = {min_len:1}];
}

message AddDepartmentReply{
  uint32 id = 1;
}

message UpdateDepartmentRequest{
  uint32 id = 1[(validate.rules).uint32 = {gt:0}];
  uint32 parent_id = 2[(validate.rules).uint32 = {gt:0}];
  string name = 3[(validate.rules).string = {min_len:1}];
  string description = 4[(validate.rules).string = {min_len:1}];
}

message DeleteDepartmentRequest{
  uint32 id = 1[(validate.rules).uint32 = {gt:0}];
}


message AllDepartmentObjectValueRequest {
  uint32 object_id = 1[(validate.rules).uint32 = {gt:0}];
  uint32 department_id = 2[(validate.rules).uint32 = {gt:0}];
}

message AllDepartmentObjectValueReply {
  repeated string values = 1;
}

message ImportDepartmentObjectRequest {
  uint32 object_id = 1[(validate.rules).uint32 = {gt:0}];
  uint32 department_id = 2[(validate.rules).uint32 = {gt:0}];
  repeated string values = 3[(validate.rules).repeated.min_items = 1];
}

message AddDepartmentObjectRequest {
  string object_keyword = 1[(validate.rules).string = {min_len:0}];
  string value = 2[(validate.rules).string = {min_len:1}];
}

message AddDepartmentObjectReply{
  uint32 id =1;
}

message DeleteDepartmentObjectRequest {
  string object_keyword = 1[(validate.rules).string = {min_len:0}];
  string value = 2[(validate.rules).string = {min_len:1}];
}