syntax = "proto3";

package manager_department;
option go_package = "./v1;v1";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "manager_department.proto";


service Service {
  // GetDepartmentTree 获取部门树
  rpc GetDepartmentTree (google.protobuf.Empty) returns (GetDepartmentTreeReply) {
    option (google.api.http) = {
      get: "/manager/v1/department/tree",
      response_body: "list",
    };
  }

  // AddDepartment 删除部门信息
  rpc AddDepartment (AddDepartmentRequest) returns (AddDepartmentReply) {
    option (google.api.http) = {
      post: "/manager/v1/department",
      body: "*",
    };
  }

  // UpdateDepartment 更新部门信息
  rpc UpdateDepartment (UpdateDepartmentRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/manager/v1/department",
      body: "*",
    };
  }

  // DeleteDepartment 删除部门信息
  rpc DeleteDepartment (DeleteDepartmentRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/manager/v1/department",
    };
  }

  // AllDepartmentObject 分页获取资源对象信息值
  rpc AllDepartmentObjectValue (AllDepartmentObjectValueRequest) returns (AllDepartmentObjectValueReply) {
    option (google.api.http) = {
      get: "/manager/v1/department/objects",
    };
  }

  // AddDepartmentObject 删除资源对象信息
  rpc AddDepartmentObject (AddDepartmentObjectRequest) returns (AddDepartmentObjectReply) {
    option (google.api.http) = {
      post: "/manager/v1/department/object",
      body: "*",
    };
  }

  // ImportDepartmentObject 更新资源对象信息
  rpc ImportDepartmentObject (ImportDepartmentObjectRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/manager/v1/department/objects",
      body: "*",
    };
  }

  // DeleteDepartmentObject 删除资源对象信息
  rpc DeleteDepartmentObject (DeleteDepartmentObjectRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/manager/v1/department/object",
    };
  }
}